fix layout styles for body and sections using Flexbox to improve alignment for practice

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 /* Base Styles */
 body {
-  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  min-height: 100vh;
   color: rgb(234, 239, 255);
-  align-items: center;
   text-align: center;
   background-color: #c4d1f4;
   font-family:
@@ -85,7 +88,8 @@ main {
 }
 /* About Section */
 .about-us {
-  align-self: center;
+  max-width: 1150px;
+  width: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: 8px;
   box-shadow: 0 5px 7px #171717;
@@ -101,8 +105,8 @@ main {
 
 /* Specials Section */
 .specials-section {
-  align-self: center;
   max-width: 1150px;
+  width: 100%;
   display: inline-flex;
   margin-bottom: 48px;
   background-color: rgb(255, 255, 255);
